// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for annotating new file before upload 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="ui form"
      >
        <div
          class="required field"
        >
          <label
            for="file_name"
          >
            Document Title:
          </label>
          <input
            data-testid="name-input"
            name="file_name"
            placeholder="Phenotypic Data manifest for..."
            type="text"
            value=""
          />
          <small>
            Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
          </small>
        </div>
        <div
          class="required field"
        >
          <label
            for="file_type"
          >
            Document Type:
          </label>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="DBG"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="DBG"
                  />
                  <i
                    aria-hidden="true"
                    class="black file alternate large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    dbGaP Submission File
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="OTH"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="OTH"
                  />
                  <i
                    aria-hidden="true"
                    class="black question large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Other
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                </p>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="ui form"
    >
      <div
        class="required field"
      >
        <label
          for="file_name"
        >
          Document Title:
        </label>
        <input
          data-testid="name-input"
          name="file_name"
          placeholder="Phenotypic Data manifest for..."
          type="text"
          value=""
        />
        <small>
          Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
        </small>
      </div>
      <div
        class="required field"
      >
        <label
          for="file_type"
        >
          Document Type:
        </label>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="DBG"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="DBG"
                />
                <i
                  aria-hidden="true"
                  class="black file alternate large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  dbGaP Submission File
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="OTH"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="OTH"
                />
                <i
                  aria-hidden="true"
                  class="black question large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Other
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
              </p>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders correctly for editing existing file 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="ui form"
      >
        <div
          class="required field"
        >
          <label
            for="file_name"
          >
            Document Title:
          </label>
          <input
            data-testid="name-input"
            name="file_name"
            placeholder="Phenotypic Data manifest for..."
            type="text"
            value="Existing File Name"
          />
          <small>
            Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
          </small>
        </div>
        <div
          class="field"
        >
          <label>
            Approval Status:
          </label>
          <div
            aria-expanded="false"
            class="ui fluid selection dropdown"
            name="file_status"
            role="listbox"
            tabindex="0"
          >
            <div
              aria-atomic="true"
              aria-live="polite"
              class="text"
              role="alert"
            >
              Pending review
            </div>
            <i
              aria-hidden="true"
              class="dropdown icon"
            />
            <div
              class="menu transition"
            >
              <div
                aria-checked="true"
                aria-selected="true"
                class="active selected item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui orange tiny basic label text"
                >
                  Pending review
                </div>
              </div>
              <div
                aria-checked="false"
                aria-selected="false"
                class="item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui teal tiny basic label text"
                >
                  Approved
                </div>
              </div>
              <div
                aria-checked="false"
                aria-selected="false"
                class="item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui red tiny basic label text"
                >
                  Changes needed
                </div>
              </div>
              <div
                aria-checked="false"
                aria-selected="false"
                class="item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui blue tiny basic label text"
                >
                  Processed
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="required field"
        >
          <label
            for="file_type"
          >
            Document Type:
          </label>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="DBG"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="DBG"
                  />
                  <i
                    aria-hidden="true"
                    class="black file alternate large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    dbGaP Submission File
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="OTH"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="OTH"
                  />
                  <i
                    aria-hidden="true"
                    class="black question large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Other
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                </p>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="ui form"
    >
      <div
        class="required field"
      >
        <label
          for="file_name"
        >
          Document Title:
        </label>
        <input
          data-testid="name-input"
          name="file_name"
          placeholder="Phenotypic Data manifest for..."
          type="text"
          value="Existing File Name"
        />
        <small>
          Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
        </small>
      </div>
      <div
        class="field"
      >
        <label>
          Approval Status:
        </label>
        <div
          aria-expanded="false"
          class="ui fluid selection dropdown"
          name="file_status"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            class="text"
            role="alert"
          >
            Pending review
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="true"
              aria-selected="true"
              class="active selected item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui orange tiny basic label text"
              >
                Pending review
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui teal tiny basic label text"
              >
                Approved
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui red tiny basic label text"
              >
                Changes needed
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui blue tiny basic label text"
              >
                Processed
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="required field"
      >
        <label
          for="file_type"
        >
          Document Type:
        </label>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="DBG"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="DBG"
                />
                <i
                  aria-hidden="true"
                  class="black file alternate large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  dbGaP Submission File
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="OTH"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="OTH"
                />
                <i
                  aria-hidden="true"
                  class="black question large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Other
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
              </p>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
